--- a/.github/workflows/Spam.yml
+++ b/.github/workflows/Spam.yml
@@ -18,9 +18,9 @@ jobs:
 
         with:
 
-          find: "𝐑𝐢𝐙𝐨𝐞𝐋"
+          find: "DragNeelOP"
 
-          replace: "𝙽𝚘𝚗𝚁𝚘𝚘𝚝𝚎𝚍"
+          replace: "hackelite01"
 
       - name: Create Pull Request
 
