--- a/.github/workflows/Edit.yml
+++ b/.github/workflows/Edit.yml
@@ -19,9 +19,9 @@ jobs:
 
         with:
 
-          find: "rizoel"
+          find: "DragNeelOP"
 
-          replace: "mayank"
+          replace: "hackelite01"
 
       - name: Create Pull Request
 
