--- a/.github/workflows/Edit.yml
+++ b/.github/workflows/Edit.yml
@@ -19,9 +19,9 @@ jobs:
 
         with:
 
-          find: "𝐑𝐢𝐙𝐨𝐞𝐋"
+          find: "RiZoel"
 
-          replace: "𝙽𝚘𝚗𝚁𝚘𝚘𝚝𝚎𝚍"
+          replace: "NonRooted"
 
       - name: Create Pull Request
 
